<resources>
    <string name="app_name">Finco</string>

    <!--Default-->
    <string name="email_text">Email</string>
    <string name="password_text">Senha</string>

    <string name="empty_text">---</string>
    <string name="br_value_mask">R$ 0,00</string>

    <!--Menu-->
    <string name="menu_logout_item">Sair</string>

    <!--Activity Login-->
    <string name="activity_login_button_text">Entrar</string>
    <string name="activity_login_register_now_text"><u>Cadastre-se agora!</u></string>

    <!--Register Activity-->
    <string name="activity_register_button_text"><u>Cadastrar</u></string>

    <!--Register Expense Activity-->
    <string name="activity_register_expense_name_text">Nome da despesa</string>
    <string name="activity_register_expense_maturity_date_text">Vencimento</string>
    <string name="activity_register_expense_fixed_text">Fixo</string>
    <string name="activity_register_expense_installments_text">Parcelado</string>
    <string name="activity_register_expense_register_text">Cadastrar</string>
</resources>
